<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_find_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:backgroundTint="#130404"
        android:text="@string/find_location_btn"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/display_address"
        app:layout_constraintBottom_toTopOf="@+id/btn_find_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#00FFFFFF"
        android:hint="@string/et_lat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lbl_latitude"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:text="@string/lbl_lat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="84dp"
        android:text="@string/lbl_long"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_latitude" />

    <EditText
        android:id="@+id/et_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#00FFFFFF"
        android:hint="@string/et_long"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toEndOf="@+id/lbl_longitude"
        app:layout_constraintTop_toBottomOf="@+id/et_latitude" />

    <ImageButton
        android:id="@+id/btn_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#16FFFFFF"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <ImageButton
        android:id="@+id/btn_nav_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#08FFFFFF"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <ImageButton
        android:id="@+id/delete_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:layout_marginEnd="56dp"
        android:src="@drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>